feat(inventory): add image upload method
