# cmd/api/main.go
@@ -4,9 +4,13 @@ import (
 	"context"
 	"log"
 
+	"github.com/aws/aws-sdk-go-v2/aws"
+	awsconfig "github.com/aws/aws-sdk-go-v2/config"
+	"github.com/aws/aws-sdk-go-v2/credentials"
 	"github.com/emersonvalentim/drobe-api/cmd/api/config"
 	"github.com/emersonvalentim/drobe-api/cmd/api/router"
 	"github.com/emersonvalentim/drobe-api/internal/env"
+	"github.com/emersonvalentim/drobe-api/internal/filestore"
 	"github.com/emersonvalentim/drobe-api/internal/postgres"
 	"github.com/emersonvalentim/drobe-api/services/auth"
 	"github.com/emersonvalentim/drobe-api/services/inventory"
@@ -19,12 +23,19 @@ func main() {
 		log.Fatalf("Failed to load configuration: %v", err)
 	}
 
+	awsConfig, err := setupAWSConfig(cfg)
+	if err != nil {
+		log.Fatalf("Failed to setup AWS config: %v", err)
+	}
+
 	postgres, err := postgres.New(context.Background(), getDatabaseURL(cfg))
 	if err != nil {
 		log.Fatalf("Failed to connect to database: %v", err)
 	}
 
-	inventoryService := inventory.NewService(inventory.NewRepository(postgres))
+	imageBucketClient := filestore.NewS3Client(awsConfig, cfg.S3.Bucket, cfg.S3.Endpoint)
+
+	inventoryService := inventory.NewService(inventory.NewRepository(postgres), imageBucketClient)
 	authService := auth.NewService(cfg.AuthSecret, cfg.JWTSecret, auth.NewRepository(postgres))
 
 	router := router.NewRouter(inventoryService, authService, &cfg)
@@ -32,5 +43,18 @@ func main() {
 }
 
 func getDatabaseURL(cfg config.Env) string {
-	return "postgres://" + cfg.PostgresUser + ":" + cfg.PostgresPassword + "@" + cfg.PostgresHost + ":" + cfg.PostgresPort + "/" + cfg.PostgresDB + "?sslmode=disable"
+	return "postgres://" + cfg.Postgres.User + ":" + cfg.Postgres.Password + "@" + cfg.Postgres.Host + ":" + cfg.Postgres.Port + "/" + cfg.Postgres.DB + "?sslmode=disable"
+}
+
+func setupAWSConfig(cfg config.Env) (aws.Config, error) {
+	awsConfig, err := awsconfig.LoadDefaultConfig(context.Background(), awsconfig.WithRegion(cfg.AWS.Region))
+	if err != nil {
+		return aws.Config{}, err
+	}
+
+	if cfg.AWS.AccessKeyID != "" && cfg.AWS.SecretAccessKey != "" {
+		awsConfig.Credentials = credentials.NewStaticCredentialsProvider(cfg.AWS.AccessKeyID, cfg.AWS.SecretAccessKey, "")
+	}
+
+	return awsConfig, nil
 }
